--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
     <section class="work" id="work">
         <h2 class="main-title">Nos Travaux</h2>
         <div class="work-container">
-               <div><img src="en.jpg" alt="en"></div>
-               <div><img src="en.jpg" alt="en"></div>
-               <div><img src="en.jpg" alt="en"></div>
-               <div><img src="en.jpg" alt="en"></div>
+               <div><img src="work/elec1.jpeg" alt="en"></div>
+               <div><img src="work/elec2.webp" alt="en"></div>
+               <div><img src="work/elec10.jpg" alt="en"></div>
+               <div><img src="work/el2.webp" alt="en"></div>
                <button class="btn seeMore" id="moreBtn" >Voir plus!</button>
-               <div class="moreWork"><img src="en.jpg" alt="en"></div>
-               <div class="moreWork"><img src="en.jpg" alt="en"></div>
-               <div class="moreWork"><img src="en.jpg" alt="en"></div>
-               <div class="moreWork"><img src="en.jpg" alt="en"></div>
+               <div class="moreWork"><img src="work/elec8.jpg" alt="en"></div>
+               <div class="moreWork"><img src="work/elec9.jpg" alt="en"></div>
+               <div class="moreWork"><img src="work/elel6.jpg" alt="en"></div>
+               <div class="moreWork"><img src="work/elel7.jpg" alt="en"></div>
         </div>
     </section>
 
