--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                <button class="btn seeMore" id="moreBtn" >Voir plus!</button>
                <div class="moreWork"><img src="work/elec8.jpg" alt="en"></div>
                <div class="moreWork"><img src="work/elec9.jpg" alt="en"></div>
-               <div class="moreWork"><img src="work/elel6.jpg" alt="en"></div>
+               <div class="moreWork"><img src="work/elec1.jpeg" alt="en"></div>
                <div class="moreWork"><img src="work/elel7.jpg" alt="en"></div>
         </div>
     </section>
